- invalidate activity with contradicting infinity contributions
- avoid integer overflow in cons_cumulative.c triggered by unbounded variables, see new parameter "constraints/cumulative/maxtime"
- allow negative update in SCIPconsAddUpgradeLocks() to unlock constraint upgrade
- fixed memory leaks when LP, MPS and OPB/WBO readers abort unsuccessfully

Miscellaneous
-------------
- We now use sassy as shipped with dejavu.

- add objective offset instead of objective offset variable in cip reader
- the solchecker tool is extended for rational values
- updated ampl/mp to v4.0.3
- removed 4th number in SCIP version; new format is major.minor.patch
- classify as varbound only with a binary variable in SCIPclassifyConstraintTypesLinear()

Known bugs
----------

@page RN9 Release notes for SCIP 9

@section RN930 SCIP 9.3.0
*************************

Features
--------

- simplify expressions of nonlinear constraints in MPS and LP writing to increase chance that they are recognized as quadratic

Performance improvements
------------------------

- extended SOC detection to simple bilinear constraints, e.g., x*y >= 1

Examples and applications
-------------------------

Interface changes
-----------------

### New and changed callbacks

### New API functions
- SCIPdisplaySymmetryGenerators() and SCIPdialogExecDisplaySymmetry() to display generators of symmetry group
- SCIPconsCreateRow() to create and return the row of a linearly representable constraint
- SCIPcreateRowKnapsack(), SCIPcreateRowLinear(), SCIPcreateRowLogicor(), SCIPcreateRowSetppc(), SCIPcreateRowVarbound() to create
  and get the row of linearly representable constraints.
- SCIPgetNResConflictConssApplied() to return the number of generalized resolution conflict constraints added to the problem

### Command line interface

### Interfaces to external software

### Changed parameters

### New parameters

### Data structures

Fixed bugs
----------

Miscellaneous
-------------
